# chrononode

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PHASE7_COMPLETION.md  PHASE7_QUICKSTART.md  PHASE7_SP1_OPERATIONS.md  README.md  agents.md  chrononode-plan.md  docker-compose.yml  plan.md  todo.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
chrononode_archival_client/: Cargo.toml  METRICS.md  README.md
chrononode_archival_client/config/: metrics.toml
chrononode_archival_client/dashboards/: chrononode-dashboard.json
chrononode_archival_client/src/: bitcoin_sync.rs  config.rs  lib.rs  main.rs  solana_sync.rs
chrononode_archival_client/src/api/: jsonrpc.rs  server.rs
chrononode_archival_client/src/bitcoin_sync/: README.md
chrononode_archival_client/src/ethereum_sync/: README.md
chrononode_archival_client/src/events/: HANDLERS.md  config.rs  ethereum_events.rs  event_bus.rs  event_structure.rs  message_queue.rs  mod.rs  processor.rs  publisher.rs  solana_events.rs  test_utils.rs
chrononode_archival_client/src/metrics/: mod.rs  server.rs
chrononode_archival_client/src/models/: mod.rs
chrononode_archival_client/src/proto/: chrononode.proto
chrononode_archival_client/src/solana_sync/: README.md
chrononode_archival_client/src/validation/: mod.rs
chrononode_archival_client/tests/: bitcoin_sync_test.rs
config/: chrononode.env.example  chrononode.testnet.toml  chrononode.toml.example  watchlist-bitcoin.txt  watchlist-dogecoin.txt
crates/chrononode-adapter-baals/: Cargo.toml
crates/chrononode-adapter-baals/src/: lib.rs
crates/chrononode-adapter-baals/tests/: baals_adapter_contract.rs
crates/chrononode-adapter-bitcoin/: Cargo.toml
crates/chrononode-adapter-bitcoin-light/: Cargo.toml
crates/chrononode-adapter-bitcoin-light/src/: lib.rs
crates/chrononode-adapter-bitcoin-light/tests/: bitcoin_light_adapter_contract.rs
crates/chrononode-adapter-bitcoin/src/: lib.rs
crates/chrononode-adapter-bitcoin/tests/: bitcoin_adapter_contract.rs
crates/chrononode-adapter-doge/: Cargo.toml
crates/chrononode-adapter-doge/src/: lib.rs
crates/chrononode-adapter-doge/tests/: doge_adapter_contract.rs
crates/chrononode-adapter-ethereum/: Cargo.toml
crates/chrononode-adapter-ethereum/src/: lib.rs
crates/chrononode-adapter-ethereum/tests/: ethereum_adapter_contract.rs
crates/chrononode-adapter-localfile/: Cargo.toml
crates/chrononode-adapter-localfile/src/: lib.rs
crates/chrononode-adapter-mock/: Cargo.toml
crates/chrononode-adapter-mock/src/: lib.rs
crates/chrononode-adapter-sdk/: Cargo.toml
crates/chrononode-adapter-sdk/src/: lib.rs  registry.rs  retry.rs
crates/chrononode-cli/: Cargo.toml  build.rs
crates/chrononode-cli/src/: attestation.rs  evm.rs  lib.rs  main.rs  metrics.rs  policy_compiler.rs  transfer_watcher.rs
crates/chrononode-cli/src/adapters/: baals.rs  mock.rs  mod.rs
crates/chrononode-cli/src/api/: graphql.rs  http.rs  mod.rs  rpc.rs
crates/chrononode-cli/src/archive/: cache.rs  mod.rs  pipeline.rs  policy.rs  serializer.rs
crates/chrononode-cli/src/cli/: mod.rs
crates/chrononode-cli/src/index/: mod.rs  postgres.rs  sqlite.rs
crates/chrononode-cli/src/storage/: arweave.rs  fallback.rs  ipfs.rs  local_fs.rs  mod.rs  pinata.rs  s3.rs
crates/chrononode-cli/src/verification/: checkpoint.rs  merkle.rs  mod.rs
crates/chrononode-cli/tests/: adapter_contract.rs  api_endpoints.rs  archival_flow.rs  attestation_tests.rs  checkpoint_commands.rs  dormancy_tests.rs  index_backend_fallback_tests.rs  rate_limit_tests.rs  sp1_integration_tests.rs  storage_backends.rs  watch_list_tests.rs
crates/chrononode-core/: Cargo.toml
crates/chrononode-core/benches/: proof_bench.rs
crates/chrononode-core/src/: adapters.rs  address_evidence.rs  block.rs  chain.rs  config.rs  dormancy.rs  error.rs  evidence.rs  lib.rs  policy.rs  proof.rs  signing.rs  zkvm.rs
crates/chrononode-sdk/: Cargo.toml
crates/chrononode-sdk/src/: lib.rs
crates/chrononode-sdk/tests/: sdk_tests.rs
crates/chrononode-zkvm-program/: Cargo.toml
crates/chrononode-zkvm-program/src/: main.rs
deploy/: chrononode.service  setup-vps.sh
deploy/caddy/: Caddyfile
deploy/fail2ban/: chrononode-api-jail.conf  chrononode-api.conf
deploy/grafana/: chrononode-dashboard.json
deploy/grafana/provisioning/dashboards/: all.yml
deploy/k8s/: chrononode-api-deployment.yaml  chrononode-configmap.yaml  chrononode-ingest-deployment.yaml  chrononode-service.yaml
deploy/prometheus/: prometheus.yml
deploy/scripts/: authorize-dormancy-oracle.sh  import-watchlists.sh
deploy/systemd/: README.md  chrononode-anchor@.service  chrononode-anchor@.timer  chrononode-api.service  chrononode-api@.service  chrononode-ingest.service  chrononode-ingest@.service  chrononode.target
docs/: CN2SPEC.md  ChronoNodeMonetization.md  ChronoNodePB.md  ChronoNodeTB.md  ChronoNode_v2_Efficiency_Spec.md  adapter-authoring.md  architecture.md  baals-integration.md  integration.md  operations.md  plan.md  proof-model.md
explorer/: eslint.config.mjs  package-lock.json  package.json
explorer/src/app/: globals.css  layout.tsx  page.tsx
explorer/src/app/components/: Navbar.tsx
explorer/src/app/proofs/: page.tsx
explorer/src/app/proofs/attestations/: page.tsx
explorer/src/app/utils/: api.ts
legacy-v1/: Cargo.toml  build.rs
legacy-v1/src/: bitcoin_rpc.rs  bitcoin_sync.rs  errors.rs  ethereum_sync.rs  lib.rs  main.rs
legacy-v1/src/api/: graphql.rs  mod.rs
legacy-v1/src/events/: README.md  bitcoin_events.rs  mod.rs.new
legacy-v1/src/proto/: chrononode.proto
legacy-v1/src/storage/: index.rs
proto/: chrononode.proto
sdk/python/: README.md  pyproject.toml
sdk/python/chrononode/: __init__.py  client.py  pandas_helper.py  verification.py
sdk/python/examples/: demo.py  demo_notebook.ipynb
sdk/python/tests/: test_sdk.py
sdk/typescript/: .gitignore  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/typescript/tests/: sdk.test.ts
(+16 files in other folders)
