[workspace]
members = [
    "crates/chrononode-core",
    "crates/chrononode-adapter-sdk",
    "crates/chrononode-adapter-mock",
    "crates/chrononode-adapter-baals",
    "crates/chrononode-adapter-localfile",
    "crates/chrononode-adapter-bitcoin",
    "crates/chrononode-adapter-bitcoin-light",
    "crates/chrononode-adapter-doge",
    "crates/chrononode-adapter-ethereum",
    "crates/chrononode-cli",
    "crates/chrononode-sdk",
    "crates/chrononode-zkvm-program",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrononode/chrononode"
