[package]
name = "chrononode_archival_client"
version = "0.1.0"
edition = "2021"
authors = ["ChronoNode Team"]
description = "ChronoNode Archival Client for blockchain data synchronization and processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrononode/chrononode-archival-client"

[features]
default = ["system-metrics"]
system-metrics = ["dep:sys-info"]
# Temporarily disabled for compilation
# bitcoin = ["dep:bitcoin"]
# ethereum = [
#     "dep:ethers-core",
#     "dep:ethers-providers",
#     "dep:ethers-signers",
#     "dep:ethers-contract",
# ]
# solana = [
#     "dep:solana-sdk",
#     "dep:solana-client",
#     "dep:solana-transaction-status",
#     "dep:bs58",
# ]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
serde_json = "1.0"
serde_yaml = "0.9"
prost = "0.11"
rusqlite = { version = "0.29", features = ["bundled"] }

# Async Runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"

# Metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
sys-info = { version = "0.9.1", optional = true }

# HTTP Server
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"

# JSON-RPC
jsonrpsee = { version = "0.21", features = ["server", "macros"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.13"

# Database
rocksdb = "0.21"

# Message Queue
lapin = { version = "2.3", optional = true }
crossbeam-channel = "0.5"

# Utility
data-encoding = "2.3"
hex = "0.4"
bytes = "1.0"
url = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Blockchain-specific dependencies (temporarily disabled for compilation)
# bitcoin = { version = "0.31", optional = true }
# jsonrpc-core-client = { version = "18.0", optional = true }
# ethers-core = { version = "2.0.0", optional = true }
# ethers-providers = { version = "2.0.0", optional = true }
# ethers-signers = { version = "2.0.0", optional = true }
# ethers-contract = { version = "2.0.0", optional = true }
# solana-sdk = { version = "1.17.0", optional = true }
# solana-client = { version = "1.17.0", optional = true }
# solana-transaction-status = { version = "1.17.0", optional = true }
# bs58 = { version = "0.5", optional = true }

# For testing
tempfile = { version = "3.0", optional = true }

[dev-dependencies]
mockito = "1.0"
tempfile = "3.3"
serde_json = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
serial_test = "2.0"
pretty_assertions = "1.3"
rstest = "0.18"

[build-dependencies]
prost-build = "0.11"
prost-types = "0.11"
protobuf-src = "1.1"
