[package]
name = "chrononode-adapter-bitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ChronoNode Bitcoin adapter — ingest blocks from Bitcoin Core via JSON-RPC"

[dependencies]
chrononode-core = { path = "../chrononode-core" }
chrononode-adapter-sdk = { path = "../chrononode-adapter-sdk" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros"] }
