[package]
name = "chrononode-adapter-doge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ChronoNode Dogecoin adapter — ingest blocks via BlockCypher REST API"

[dependencies]
chrononode-core = { path = "../chrononode-core" }
chrononode-adapter-sdk = { path = "../chrononode-adapter-sdk" }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
mockito = "1"
