[package]
name = "chrononode-adapter-localfile"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrononode-core = { path = "../chrononode-core" }
chrononode-adapter-sdk = { path = "../chrononode-adapter-sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }
