[package]
name = "chrononode-adapter-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ChronoNode adapter SDK — registry, retry, and utilities for network adapters"

[dependencies]
chrononode-core = { path = "../chrononode-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
async-trait = "0.1"
tracing = "0.1"
