[package]
name = "chrononode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ChronoNode CLI — archive, index, prove, and serve blockchain history"

[dependencies]
chrononode-core = { path = "../chrononode-core" }
chrononode-adapter-sdk = { path = "../chrononode-adapter-sdk" }
chrononode-adapter-mock = { path = "../chrononode-adapter-mock" }
chrononode-adapter-baals = { path = "../chrononode-adapter-baals" }
chrononode-adapter-localfile = { path = "../chrononode-adapter-localfile" }
chrononode-adapter-bitcoin = { path = "../chrononode-adapter-bitcoin" }
chrononode-adapter-bitcoin-light = { path = "../chrononode-adapter-bitcoin-light" }
chrononode-adapter-doge = { path = "../chrononode-adapter-doge" }
chrononode-adapter-ethereum = { path = "../chrononode-adapter-ethereum" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "signal", "macros"] }
async-trait = "0.1"
futures = "0.3"

prost = "0.14"
sha2 = "0.10"
hex = "0.4"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

axum = "0.8"
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "auth"] }
http-body-util = "0.1"

async-graphql = "8.0.0-rc.5"
async-graphql-axum = "8.0.0-rc.5"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
zstd = "0.13"

reqwest = { version = "0.13", features = ["json", "multipart"] }

object_store = { version = "0.13", features = ["aws"] }
bytes = "1"

ed25519-dalek = "2"
rand = "0.8"
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }

metrics = "0.24"
metrics-exporter-prometheus = "0.17"
lazy_static = "1"
moka = { version = "0.12", features = ["sync"] }
notify = "6.1.1"

utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[features]
default = []
postgres = ["sqlx/postgres"]

[build-dependencies]
prost-build = "0.14"
prost-types = "0.14"
protoc-bin-vendored = "3.0"

[dev-dependencies]
tempfile = "3"
mockito = "1"
pretty_assertions = "1"
sha2 = "0.10"
proptest = "1.5"

[[bench]]
name = "benchmarks"
path = "../../benches/benchmarks.rs"
harness = false
