[package]
name = "chrononode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core models, traits, proof logic, and error types for ChronoNode"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
prost = "0.13"
tokio = { version = "1", features = ["sync"] }
