[package]
name = "chrononode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core models, traits, proof logic, and error types for ChronoNode"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
prost = "0.14"
tokio = { version = "1", features = ["sync"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sp1-sdk = { version = "3.0.0", optional = true }

[features]
zkvm = ["dep:sp1-sdk"]

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"

[[bench]]
name = "proof_bench"
harness = false
