[package]
name = "chrononode-zkvm-program"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "chrononode-zkvm-program"
path = "src/main.rs"

[dependencies]
sp1-zkvm = { version = "3.0.0" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
